@@ -7,12 +7,9 @@ import org.testng.annotations.Test;
 import org.testng.collections.Sets;
 
 import java.io.IOException;
-import java.util.Set;
+import java.util.*;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertSame;
-import static org.junit.Assert.fail;
-import static org.testng.Assert.expectThrows;
+import static org.testng.Assert.*;
 
 public class AssertTest {
 
@@ -34,26 +31,26 @@ public class AssertTest {
   public void intArray_Issue4() {
     int[] intArr00 = {1};
     int[] intArr01 = {1};
-    Assert.assertEquals(intArr00, intArr01);
+    assertEquals(intArr00, intArr01);
   }
 
   @Test(expectedExceptions = AssertionError.class)
   public void arraysFailures_1() {
     int[] intArr = {1, 2};
     long[] longArr = {1, 2};
-    Assert.assertEquals(intArr, longArr);
+    assertEquals(intArr, longArr);
   }
 
   @Test(expectedExceptions = AssertionError.class)
   public void arraysFailures_2() {
     int[] intArr = {1, 2};
-    Assert.assertEquals(intArr, (long) 1);
+    assertEquals(intArr, (long) 1);
   }
 
   @Test(expectedExceptions = AssertionError.class)
   public void arraysFailures_3() {
     long[] longArr = {1};
-    Assert.assertEquals((long) 1, longArr);
+    assertEquals((long) 1, longArr);
   }
 
   @Test
@@ -70,8 +67,8 @@ public class AssertTest {
     set1.add(2);
     set2.add(2);
 
-    Assert.assertEquals(set1, set2);
-    Assert.assertEquals(set2, set1);
+    assertEquals(set1, set2);
+    assertEquals(set2, set1);
   }
 
   @Test(expectedExceptions = AssertionError.class)
@@ -148,7 +145,7 @@ public class AssertTest {
 
   @Test
   public void doubleNaNAssertion() {
-    Assert.assertEquals(Double.NaN, Double.NaN, 0.0);
+    assertEquals(Double.NaN, Double.NaN, 0.0);
   }
 
   @DataProvider
@@ -162,7 +159,7 @@ public class AssertTest {
 
   @Test(dataProvider="identicalArraysWithNull")
   public void identicalArraysWithNullValues(String[] actual, String[] expected) {
-    Assert.assertEquals(actual, expected);
+    assertEquals(actual, expected);
   }
 
   @DataProvider
@@ -179,4 +176,183 @@ public class AssertTest {
     Assert.assertNotEquals(actual, expected);
   }
 
+  @Test(description = "GITHUB-2540", expectedExceptions = AssertionError.class)
+  public void checkCollectionEqualsFailsWhenDifferentOrder() {
+
+    Collection<String> collection1 = new LinkedHashSet<>(Arrays.asList("a", "b", "c"));
+    Collection<String> collection2 = new LinkedHashSet<>(Arrays.asList("a", "c", "b"));
+
+    assertEquals(collection1, collection2);
+  }
+
+  @Test(description = "GITHUB-2540")
+  public void checkCollectionEqualsNoOrder() {
+
+    Collection<String> collection1 = new LinkedHashSet<>(Arrays.asList("a", "b", "c"));
+    Collection<String> collection2 = new LinkedHashSet<>(Arrays.asList("a", "c", "b"));
+
+    assertEqualsNoOrder(collection1, collection2);
+  }
+
+  @Test(description = "GITHUB-2540")
+  public void checkCollectionEquals() {
+
+    Collection<String> collection1 = new LinkedHashSet<>(Arrays.asList("a", "b", "c"));
+    Collection<String> collection2 = new LinkedHashSet<>(Arrays.asList("a", "b", "c"));
+
+    assertEquals(collection1, collection2);
+  }
+
+  @Test(description = "GITHUB-2540")
+  public void checkCollectionNotEquals() {
+
+    Collection<String> collection1 = new LinkedHashSet<>(Arrays.asList("a", "b", "c"));
+    Collection<String> collection2 = new LinkedHashSet<>(Arrays.asList("a", "c", "b"));
+
+    assertNotEquals(collection1, collection2);
+  }
+
+  @Test(description = "GITHUB-2540", expectedExceptions = AssertionError.class)
+  public void checkCollectionNotEqualsFailsWhenDifferentOrder() {
+
+    Collection<String> collection1 = new LinkedHashSet<>(Arrays.asList("a", "b", "c"));
+    Collection<String> collection2 = new LinkedHashSet<>(Arrays.asList("a", "b", "c"));
+
+    assertNotEquals(collection1, collection2);
+  }
+
+  @Test(description = "GITHUB-2540", expectedExceptions = AssertionError.class)
+  public void checkIteratorEqualsFailsWhenDifferentOrder() {
+
+    Iterator<String> iterator1 = (new LinkedHashSet<>(Arrays.asList("a", "b", "c"))).iterator();
+    Iterator<String> iterator2 = (new LinkedHashSet<>(Arrays.asList("a", "c", "b"))).iterator();
+
+    assertEquals(iterator1, iterator2);
+  }
+
+  @Test(description = "GITHUB-2540")
+  public void checkIteratorEqualsNoOrder() {
+
+    Iterator<String> iterator1 = (new LinkedHashSet<>(Arrays.asList("a", "b", "c"))).iterator();
+    Iterator<String> iterator2 = (new LinkedHashSet<>(Arrays.asList("a", "c", "b"))).iterator();
+
+    assertEqualsNoOrder(iterator1, iterator2);
+  }
+
+  @Test(description = "GITHUB-2540")
+  public void checkIteratorEquals() {
+
+    Iterator<String> iterator1 = (new LinkedHashSet<>(Arrays.asList("a", "b", "c"))).iterator();
+    Iterator<String> iterator2 = (new LinkedHashSet<>(Arrays.asList("a", "b", "c"))).iterator();
+
+    assertEquals(iterator1, iterator2);
+  }
+
+  @Test(description = "GITHUB-2540")
+  public void checkIteratorNotEquals() {
+
+    Iterator<String> iterator1 = (new LinkedHashSet<>(Arrays.asList("a", "b", "c"))).iterator();
+    Iterator<String> iterator2 = (new LinkedHashSet<>(Arrays.asList("a", "c", "b"))).iterator();
+
+    assertNotEquals(iterator1, iterator2);
+  }
+
+  @Test(description = "GITHUB-2540", expectedExceptions = AssertionError.class)
+  public void checkIteratorNotEqualsFailsWhenDifferentOrder() {
+
+    Iterator<String> iterator1 = (new LinkedHashSet<>(Arrays.asList("a", "b", "c"))).iterator();
+    Iterator<String> iterator2 = (new LinkedHashSet<>(Arrays.asList("a", "b", "c"))).iterator();
+
+    assertNotEquals(iterator1, iterator2);
+  }
+
+  @Test(description = "GITHUB-2540", expectedExceptions = AssertionError.class)
+  public void checkSetEqualsFailsWhenDifferentOrder() {
+
+    Set<String> set1 = new LinkedHashSet<>(Arrays.asList("a", "b", "c"));
+    Set<String> set2 = new LinkedHashSet<>(Arrays.asList("a", "c", "b"));
+
+    assertEquals(set1, set2);
+  }
+
+  @Test(description = "GITHUB-2540")
+  public void checkSetEqualsNoOrder() {
+
+    Set<String> set1 = new LinkedHashSet<>(Arrays.asList("a", "b", "c"));
+    Set<String> set2 = new LinkedHashSet<>(Arrays.asList("a", "c", "b"));
+
+    assertEqualsNoOrder(set1, set2);
+  }
+
+  @Test(description = "GITHUB-2540")
+  public void checkSetEquals() {
+
+    Set<String> set1 = new LinkedHashSet<>(Arrays.asList("a", "b", "c"));
+    Set<String> set2 = new LinkedHashSet<>(Arrays.asList("a", "b", "c"));
+
+    assertEquals(set1, set2);
+  }
+
+  @Test(description = "GITHUB-2540")
+  public void checkSetNotEquals() {
+
+    Set<String> set1 = new LinkedHashSet<>(Arrays.asList("a", "b", "c"));
+    Set<String> set2 = new LinkedHashSet<>(Arrays.asList("a", "c", "b"));
+
+    assertNotEquals(set1, set2);
+  }
+
+  @Test(description = "GITHUB-2540", expectedExceptions = AssertionError.class)
+  public void checkSetNotEqualsFailsWhenDifferentOrder() {
+
+    Set<String> set1 = new LinkedHashSet<>(Arrays.asList("a", "b", "c"));
+    Set<String> set2 = new LinkedHashSet<>(Arrays.asList("a", "b", "c"));
+
+    assertNotEquals(set1, set2);
+  }
+
+  @Test(description = "GITHUB-2540", expectedExceptions = AssertionError.class)
+  public void checkArrayEqualsFailsWhenDifferentOrder() {
+
+    String[] array1 = { "a", "b", "c" };
+    String[] array2 = { "a", "c", "b" };
+
+    assertEquals(array1, array2);
+  }
+
+  @Test(description = "GITHUB-2540")
+  public void checkArrayEqualsNoOrder() {
+
+    String[] array1 = { "a", "b", "c" };
+    String[] array2 = { "a", "c", "b" };
+
+    assertEqualsNoOrder(array1, array2);
+  }
+
+  @Test(description = "GITHUB-2540")
+  public void checkArrayEquals() {
+
+    String[] array1 = { "a", "b", "c" };
+    String[] array2 = { "a", "b", "c" };
+
+    assertEquals(array1, array2);
+  }
+
+  @Test(description = "GITHUB-2540")
+  public void checkArrayNotEquals() {
+
+    String[] array1 = { "a", "b", "c" };
+    String[] array2 = { "a", "c", "b" };
+
+    assertNotEquals(array1, array2);
+  }
+
+  @Test(description = "GITHUB-2540", expectedExceptions = AssertionError.class)
+  public void checkArrayNotEqualsFailsWhenDifferentOrder() {
+
+    String[] array1 = {"a", "b", "c" };
+    String[] array2 = {"a", "b", "c" };
+
+    assertNotEquals(array1, array2);
+  }
 }
