@@ -1,4 +1,5 @@
 Current
+Fixed: GITHUB-2540: assertEquals(Collection) need check order (Stuart Marks & Julien Herr)
 Fixed: GITHUB-2360: Groovy 3 internal generated methods are detected as test methods (Ian Springer)
 Fixed: GITHUB-2522: TestNG 7.4.0 Can not skip test through listener (Nan Liang)
 Fixed: GITHUB-2529: Link to testng.xml in CONTRIBUTING.md file was dead
